# MNEME

./: .gitignore  README.md  pyproject.toml
mneme/: __init__.py
mneme/baselines/: __init__.py  bitemporal.py  harness.py  judge.py  prompts.py  rag.py  summary.py
mneme/db/: __init__.py  connection.py  schema.sql  serde.py
mneme/domain/: __init__.py  events.py  facts.py
mneme/embeddings/: __init__.py  client.py
mneme/eval/: __init__.py  dataset.py  generator.py  harness.py  oracle.py  scenario.py  validate.py
mneme/facts/: __init__.py  candidates.py  detection_prompts.py  detector.py  extractor.py  llm_extractor.py  policy.py  prompts.py  store.py
mneme/index/: __init__.py  faiss_index.py  render.py  semantic_index.py
mneme/llm/: __init__.py  client.py  json_io.py
mneme/log/: __init__.py  event_log.py
mneme/mcp/: __init__.py  __main__.py  (+2 more)
scripts/: baselines_demo.py  eval_harness.py  extract_demo.py  generate_dataset.py  semantic_demo.py  supersede_demo.py
tests/: conftest.py  test_baselines_bitemporal.py  test_baselines_rag.py  test_baselines_summary.py  test_candidates.py  test_codex_config.py  test_detector.py  test_embedding_client.py  test_eval_generator.py  test_eval_harness.py  test_eval_scenario.py  test_event_log.py  test_fact_store.py  test_faiss_index.py  test_json_io.py  test_llm_client.py  test_llm_extractor.py  test_mcp_server.py  test_mcp_tools.py  test_memory_service.py  test_overwrite_policy.py  test_plugin_hooks.py  test_query_router.py  test_schema.py  test_semantic_index.py  test_service_factory.py  test_service_paths.py  test_store_writes.py  test_supersede_policy.py
(+16 files in other folders)
