[project]
name = "mneme"
version = "0.0.1"
description = "An event-sourced memory operating system for AI — MVP"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["anthropic>=0.40"]
vectors = ["faiss-cpu>=1.8", "numpy>=1.26"]
embeddings = ["openai>=1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mneme*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
